<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.detail.ProductDetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/design_default_color_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/product_detail_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/product_detail_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/name_text_dots"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_detail_img" />

            <TextView
                android:id="@+id/product_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/name"
                app:layout_constraintBaseline_toBaselineOf="@+id/product_detail_name_text"
                app:layout_constraintStart_toEndOf="@+id/product_detail_name_text" />

            <TextView
                android:id="@+id/product_detail_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/price_text_dots"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_detail_name_text" />

            <TextView
                android:id="@+id/product_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/price"
                app:layout_constraintBaseline_toBaselineOf="@+id/product_detail_price_text"
                app:layout_constraintStart_toEndOf="@+id/product_detail_price_text" />

            <TextView
                android:id="@+id/product_detail_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/description_text_dots"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_detail_price_text" />

            <TextView
                android:id="@+id/product_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/description"
                app:layout_constraintBaseline_toBaselineOf="@+id/product_detail_description_text"
                app:layout_constraintStart_toEndOf="@+id/product_detail_description_text" />

            <TextView
                android:id="@+id/product_detail_last_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:text="@string/last_price_text_dots"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_detail_description_text" />

            <TextView
                android:id="@+id/product_detail_last_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/last_price"
                app:layout_constraintBaseline_toBaselineOf="@+id/product_detail_last_price_text"
                app:layout_constraintStart_toEndOf="@+id/product_detail_last_price_text" />

            <TextView
                android:id="@+id/product_detail_credit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/credit_text_dots"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_detail_last_price_text" />

            <TextView
                android:id="@+id/product_detail_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/credit"
                app:layout_constraintBaseline_toBaselineOf="@+id/product_detail_credit_text"
                app:layout_constraintStart_toEndOf="@+id/product_detail_credit_text" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_baseline_add_shopping_cart_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_detail_credit_text"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>